tests/no_source_error/no_source_error.exp
Error ------------------------------------------------------------------------------------------------ no_source.js:16:7

Cannot call `x.filter` because: [incompatible-type]
 - Either property `bar` is missing in `Foo` [1] but exists in `FooPlus` [2] in the first parameter.
 - Or function type [3] is incompatible with class `Boolean` [4].

   no_source.js:16:7
     16|     x.filter(this.z);
               ^^^^^^

References:
   no_source.js:15:20
     15|     const x: Array<Foo> = [];
                            ^^^ [1]
   no_source.js:13:12
     13|   +z : (x: FooPlus) => boolean = (x) => { return true; }
                    ^^^^^^^ [2]
   no_source.js:13:8
     13|   +z : (x: FooPlus) => boolean = (x) => { return true; }
                ^^^^^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/core.js:1018:24
   1018|     filter(callbackfn: typeof Boolean): Array<$NonMaybeType<T>>;
                                ^^^^^^^^^^^^^^ [4]



Found 1 error

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
